...
enum KeyboardKeyAction: Equatable {
  case text(String)
  case shift
  case backspace
  case page
  case nextKeyboard
  case space
  case returnKey
}

struct KeyboardLayoutKey: Equatable {
  let action: KeyboardKeyAction
  let width: Double
...
